--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo/nautik_baner.jpeg
-    - assets/logo/nautik_logo.jpeg
+    - assets/logo/nautik_logo.png
     - assets/dishes/001.jpg
     - assets/dishes/002.jpg
     - assets/dishes/003.jpg
